--- a/server/public/index.html
+++ b/server/public/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>Keeper</title>
+        <link href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap" rel="stylesheet"
+    />
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
